[package]
name = "paywow-dispute-resolver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk.workspace = true
stellar-tokens.workspace = true
stellar-access.workspace = true
stellar-contract-utils.workspace = true
stellar-macros.workspace = true
stellar-governance.workspace = true


